--- a/src/Components/PokemonDetails/pokemondetails.css
+++ b/src/Components/PokemonDetails/pokemondetails.css
@@ -1,32 +1,84 @@
-.main{
+/* 
+
+/* Default Styles */
+.main {
     height: 100vh;
     width: 100vw;
     display: flex;
     flex-direction: column-reverse;
     justify-content: center;
     align-items: center;
+    /* padding: 20px; */
+    padding: 5px;
 }
-.main-div{
+
+.main-div {
     height: 500px;
     width: 300px;
     border: 2px solid gray;
     background-color: rgb(214, 200, 200);
-    display:flex;
+    display: flex;
     flex-direction: column;
-    /* justify-content: center; */
     align-items: center;
     padding: 1rem;
     border-radius: 8px;
-}
-.Home{
-    padding: 10px;
-    color: blue;
-    font-weight:lighter;
-    font-family: Arial, Helvetica, sans-serif;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 
-img~div{
+.Home {
+    padding: 10px;
+    color: blue;
+    font-weight: lighter;
+    font-family: Arial, Helvetica, sans-serif;
+    cursor: pointer;
+    text-decoration: underline;
+}
+
+img ~ div {
     color: black;
     font-size: medium;
     font-weight: bold;
+}
+
+/* Responsive for Tablets */
+@media screen and (max-width: 768px) {
+    .main {
+        /* padding: 15px; */
+        padding: 6px;
+    }
+
+    .main-div {
+        height: 400px;
+        width: 250px;
+        padding: 0.8rem;
+    }
+
+    .Home {
+        font-size: 14px;
+    }
+
+    img ~ div {
+        font-size: small;
+    }
+}
+
+/* Responsive for Mobile Devices */
+@media screen and (max-width: 480px) {
+    .main {
+        padding: 10px;
+    }
+
+    .main-div {
+        height: 300px;
+        width: 200px;
+        padding: 0.6rem;
+    }
+
+    .Home {
+        font-size: 12px;
+    }
+
+    img ~ div {
+        font-size: smaller;
+    }
 }
